// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component Icon variant should render correctly when the variant is type icon 1`] = `
Array [
  ".surface-0-2-1 {
  display: flex;
  overflow: hidden;
  align-items: center;
  justify-content: center;
  background-color: #f4ab34;
}
.image-0-2-2 {
  height: 100%;
  object-fit: cover;
}
.label-0-2-3 {
  color: #333333;
  padding: 4px;
  font-family: Roboto, Arial;
  font-weight: 400, 400;
  text-transform: uppercase;
}
.icon-0-2-4 {
  padding: 4px;
}
.surface-d0-0-2-5 {
  width: 48px;
  height: 48px;
  border-radius: 24px;
}
.label-d1-0-2-6 {
  font-size: 24px;
  letter-spacing: 0;
  line-height: 1.5;
}
.surface-d2-0-2-7 {
  width: 48px;
  height: 48px;
  border-radius: 24px;
}
.label-d3-0-2-8 {
  font-size: 24px;
  letter-spacing: 0;
  line-height: 1.5;
}
.icon-0-2-9 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-10 {
  color: #333333;
  font-size: 48px;
}",
  <div>
    <span
      class=" surface-0-2-1 surface-d0-0-2-5"
      name="outlined-action-like"
    >
      <i
        aria-hidden="true"
        class="undefined icon-0-2-4 icon-0-2-9 icon-d0-0-2-10 natds-icons natds-icons-outlined-action-like"
        data-testid="icon-outlined-action-like"
        role="img"
      />
    </span>
  </div>,
]
`;

exports[`Avatar component Image variant should render correctly with image variant 1`] = `
Array [
  ".surface-0-2-1 {
  display: flex;
  overflow: hidden;
  align-items: center;
  justify-content: center;
  background-color: #f4ab34;
}
.image-0-2-2 {
  height: 100%;
  object-fit: cover;
}
.label-0-2-3 {
  color: #333333;
  padding: 4px;
  font-family: Roboto, Arial;
  font-weight: 400, 400;
  text-transform: uppercase;
}
.icon-0-2-4 {
  padding: 4px;
}
.surface-d0-0-2-5 {
  width: 48px;
  height: 48px;
  border-radius: 24px;
}
.label-d1-0-2-6 {
  font-size: 24px;
  letter-spacing: 0;
  line-height: 1.5;
}
.surface-d2-0-2-7 {
  width: 48px;
  height: 48px;
  border-radius: 24px;
}
.label-d3-0-2-8 {
  font-size: 24px;
  letter-spacing: 0;
  line-height: 1.5;
}",
  <div>
    <span
      alt=""
      class=" surface-0-2-1 surface-d0-0-2-5"
      src="https://"
    >
      <img
        alt=""
        class="undefined image-0-2-2"
        src="https://"
        type="image"
      />
    </span>
  </div>,
]
`;

exports[`Avatar component Label variant should render correctly when the variant is type label 1`] = `
Array [
  ".surface-0-2-1 {
  display: flex;
  overflow: hidden;
  align-items: center;
  justify-content: center;
  background-color: #f4ab34;
}
.image-0-2-2 {
  height: 100%;
  object-fit: cover;
}
.label-0-2-3 {
  color: #333333;
  padding: 4px;
  font-family: Roboto, Arial;
  font-weight: 400, 400;
  text-transform: uppercase;
}
.icon-0-2-4 {
  padding: 4px;
}
.surface-d0-0-2-5 {
  width: 48px;
  height: 48px;
  border-radius: 24px;
}
.label-d1-0-2-6 {
  font-size: 24px;
  letter-spacing: 0;
  line-height: 1.5;
}
.surface-d2-0-2-7 {
  width: 48px;
  height: 48px;
  border-radius: 24px;
}
.label-d3-0-2-8 {
  font-size: 24px;
  letter-spacing: 0;
  line-height: 1.5;
}",
  <div>
    <span
      class=" surface-0-2-1 surface-d0-0-2-5"
      label="DS"
    >
      <label
        class=" label-0-2-3 label-d3-0-2-8"
        label="DS"
        type="label"
      >
        DS
      </label>
    </span>
  </div>,
]
`;

exports[`Avatar component Label variant should render correctly when the variant is type label with default label 1`] = `
Array [
  ".surface-0-2-1 {
  display: flex;
  overflow: hidden;
  align-items: center;
  justify-content: center;
  background-color: #f4ab34;
}
.image-0-2-2 {
  height: 100%;
  object-fit: cover;
}
.label-0-2-3 {
  color: #333333;
  padding: 4px;
  font-family: Roboto, Arial;
  font-weight: 400, 400;
  text-transform: uppercase;
}
.icon-0-2-4 {
  padding: 4px;
}
.surface-d0-0-2-5 {
  width: 48px;
  height: 48px;
  border-radius: 24px;
}
.label-d1-0-2-6 {
  font-size: 24px;
  letter-spacing: 0;
  line-height: 1.5;
}
.surface-d2-0-2-7 {
  width: 48px;
  height: 48px;
  border-radius: 24px;
}
.label-d3-0-2-8 {
  font-size: 24px;
  letter-spacing: 0;
  line-height: 1.5;
}",
  <div>
    <span
      class=" surface-0-2-1 surface-d0-0-2-5"
    >
      <label
        class=" label-0-2-3 label-d3-0-2-8"
        type="label"
      >
        NA
      </label>
    </span>
  </div>,
]
`;

exports[`Avatar component should render correctly with default props 1`] = `
Array [
  ".surface-0-2-1 {
  display: flex;
  overflow: hidden;
  align-items: center;
  justify-content: center;
  background-color: #f4ab34;
}
.image-0-2-2 {
  height: 100%;
  object-fit: cover;
}
.label-0-2-3 {
  color: #333333;
  padding: 4px;
  font-family: Roboto, Arial;
  font-weight: 400, 400;
  text-transform: uppercase;
}
.icon-0-2-4 {
  padding: 4px;
}
.surface-d0-0-2-5 {
  width: 48px;
  height: 48px;
  border-radius: 24px;
}
.label-d1-0-2-6 {
  font-size: 24px;
  letter-spacing: 0;
  line-height: 1.5;
}
.surface-d2-0-2-7 {
  width: 48px;
  height: 48px;
  border-radius: 24px;
}
.label-d3-0-2-8 {
  font-size: 24px;
  letter-spacing: 0;
  line-height: 1.5;
}
.icon-0-2-9 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-10 {
  color: #333333;
  font-size: 48px;
}",
  <div>
    <span
      class=" surface-0-2-1 surface-d0-0-2-5"
    >
      <i
        aria-hidden="true"
        class="undefined icon-0-2-4 icon-0-2-9 icon-d0-0-2-10 natds-icons natds-icons-outlined-default-mockup"
        data-testid="icon-undefined"
        role="img"
      />
    </span>
  </div>,
]
`;

exports[`Avatar component should render correctly with different size 1`] = `
Array [
  ".surface-0-2-1 {
  display: flex;
  overflow: hidden;
  align-items: center;
  justify-content: center;
  background-color: #f4ab34;
}
.image-0-2-2 {
  height: 100%;
  object-fit: cover;
}
.label-0-2-3 {
  color: #333333;
  padding: 4px;
  font-family: Roboto, Arial;
  font-weight: 400, 400;
  text-transform: uppercase;
}
.icon-0-2-4 {
  padding: 4px;
}
.surface-d0-0-2-5 {
  width: 32px;
  height: 32px;
  border-radius: 16px;
}
.label-d1-0-2-6 {
  font-size: 14px;
  letter-spacing: 0.22px;
  line-height: 1.5;
}
.surface-d2-0-2-7 {
  width: 32px;
  height: 32px;
  border-radius: 16px;
}
.label-d3-0-2-8 {
  font-size: 14px;
  letter-spacing: 0.22px;
  line-height: 1.5;
}
.icon-0-2-9 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-10 {
  color: #333333;
  font-size: 32px;
}",
  <div>
    <span
      class=" surface-0-2-1 surface-d0-0-2-5"
    >
      <i
        aria-hidden="true"
        class="undefined icon-0-2-4 icon-0-2-9 icon-d0-0-2-10 natds-icons natds-icons-outlined-default-mockup"
        data-testid="icon-undefined"
        role="img"
      />
    </span>
  </div>,
]
`;
